openturns/1.16/_sources/auto_meta_modeling/polynomial_chaos_metamodel/plot_chaos_build_distribution.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_build_distribution.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_build_distribution.py:


Fit a distribution from an input sample
=======================================

In this example we show how to use the `BuildDistribution` function to fit a distribution to an input sample. This function is used by the `FunctionalChaosAlgorithm` class when we want to create a polynomial chaos metamodel and we have a design of experiments which have been computed beforehand. In this case, we have to identify the distributions which best fit to the input sample in order to define the input probabilistic model. This is, in turn, used by in the polynomial chaos to create the orthogonal basis. 



.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    ot.Log.Show(ot.Log.NONE)








We first create the function `model`.


.. code-block:: default

    ot.RandomGenerator.SetSeed(0)
    dimension = 2
    input_names = ['x1', 'x2']
    formulas = ['cos(x1 + x2)', '(x2 + 1) * exp(x1)']
    model = ot.SymbolicFunction(input_names, formulas)








Then we create a sample `x` and compute the corresponding output sample `y`.


.. code-block:: default

    distribution = ot.Normal(dimension)
    samplesize = 1000
    inputSample  = distribution.getSample(samplesize)
    outputSample = model(inputSample)








Create a functional chaos model. 
First, we need to fit a distribution on the input sample. We can do this automatically with the Lilliefors test.


.. code-block:: default

    ot.ResourceMap.SetAsUnsignedInteger("FittingTest-LillieforsMaximumSamplingSize", 100)









.. code-block:: default

    distribution = ot.FunctionalChaosAlgorithm.BuildDistribution(inputSample)









.. code-block:: default

    for i in range(dimension):
        marginal = distribution.getMarginal(i)
        marginalname = marginal.getImplementation().getClassName()
        print("Marginal #",i,":",marginalname)
    distribution.getCopula()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Marginal # 0 : Normal
    Marginal # 1 : Normal


.. raw:: html

    <p>IndependentCopula(dimension = 2)</p>
    <br />
    <br />

The previous call to `BuildDistribution` is what is done internally by the following constructor of `FunctionalChaosAlgorithm`.


.. code-block:: default

    algo = ot.FunctionalChaosAlgorithm(inputSample, outputSample)








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  7.316 seconds)


.. _sphx_glr_download_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_build_distribution.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_chaos_build_distribution.py <plot_chaos_build_distribution.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_chaos_build_distribution.ipynb <plot_chaos_build_distribution.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
